<resources>
    <string name="app_name">Quiz App</string>
    <string name="TechQuiz">Computer Technology</string>
    <string name="tagLine">A simple quiz</string>
    <string name="name_hint">Enter your name:</string>
    <string name="app_description">"A quick quiz on computer technology"</string>

    <string name="first_text">This is Apple\'s only computer line named for a specific type of apple.</string>
    <string name="first_choice_1">Granny Smith</string>
    <string name="first_choice_2">Macintosh</string>
    <string name="first_choice_3">Red Delicious</string>

    <string name="second_text">10 + 3 is equal to this value in hexadecimal...</string>
    <string name="second_choice_1">15</string>
    <string name="second_choice_2">13</string>
    <string name="second_choice_3">D</string>
    <string name="second_choice_4">1101</string>

    <string name="third_text">These Gemstones are also programming languages (check all that apply)</string>
    <string name="third_choice_1">Jade</string>
    <string name="third_choice_2">Diamond</string>
    <string name="third_choice_3">Opal</string>
    <string name="third_choice_4">Ruby</string>

    <string name="question_4_text">It is the I in IRQ...</string>
    <string name="question_4_hint">type answer</string>

    <string name="fifth_text">What is the localhost loopback address?</string>
    <string name="fifth_choice_1">127.0.0.1</string>
    <string name="fifth_choice_2">194.118.0.6</string>
    <string name="fifth_choice_3">100.100.100.1</string>

    <string name="get_score">Get Score</string>
    <string name="good_score">Congratulations</string>
    <string name="bad_score">Sorry</string>
    <string name="you_have">,\n You have</string>
    <string name="out_of">out of</string>
    <string name="correct">correct.</string>


</resources>
