<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity" >



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_medium"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium" >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_sm_negative"
                    android:gravity="center"
                    android:text="@string/grease"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_title"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tagLine"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"
                    />

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/name_hint"
                    android:backgroundTint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"/>



                <ImageView

                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/spacing_medium"
                    android:src="@drawable/quiz_logo" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_description"
                    android:text="@string/app_description" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:orientation="vertical"
                    android:theme="@style/RadioButton">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_text"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_choice_1"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:id="@+id/right_answer_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_choice_2"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_choice_3"
                        android:textColor="@android:color/black" />

                </RadioGroup>

            </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:text="@string/second_text"
                    android:textColor="@android:color/black"  />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginLeft="@dimen/spacing_medium"
                        android:layout_marginRight="@dimen/spacing_medium"
                        android:orientation="vertical"
                        android:theme="@style/RadioButton">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/second_choice_1"
                            android:textColor="@android:color/black" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/second_choice_2"
                            android:textColor="@android:color/black" />

                        <RadioButton
                            android:id="@+id/right_answer_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/second_choice_3"
                            android:textColor="@android:color/black" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/second_choice_4"
                            android:textColor="@android:color/black" />

                    </RadioGroup>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_small"
                        android:textColor="@android:color/black"
                        android:text="@string/third_text"/>

                    <CheckBox
                        android:id="@+id/tc1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:theme="@style/CheckBox"
                        android:text="@string/third_choice_1"/>

                    <CheckBox
                        android:id="@+id/tc2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:theme="@style/CheckBox"
                        android:text="@string/third_choice_2"/>

                    <CheckBox
                        android:id="@+id/tc3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:theme="@style/CheckBox"
                        android:text="@string/third_choice_3"/>

                    <CheckBox
                        android:id="@+id/tc4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:theme="@style/CheckBox"
                        android:text="@string/third_choice_4"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separator_height"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/question6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/spacing_small"
                        android:textColor="@android:color/black"
                        android:text="@string/question_4_text"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_medium"
                            android:textColor="@android:color/black"
                            android:text="@string/question_4_hint"/>

                        <EditText
                            android:id="@+id/question_4_answer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/darker_gray"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_default"
                            android:hint="            "/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/spacing_medium"
                        android:background="@color/colorPrimaryDark"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_medium"
                            android:layout_marginRight="@dimen/spacing_medium"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:orientation="vertical"
                            android:theme="@style/RadioButton">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/fifth_text"
                                android:textColor="@android:color/black" />

                            <RadioButton
                                android:id="@+id/right_answer_5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fifth_choice_1"
                                android:textColor="@android:color/black" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fifth_choice_2"
                                android:textColor="@android:color/black" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fifth_choice_3"
                                android:textColor="@android:color/black" />

                        </RadioGroup>

                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_medium"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/get_score"
                    android:onClick="gradeQuiz"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>